--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dist": "webpack --joplin-plugin-config buildMain && webpack --joplin-plugin-config buildExtraScripts && webpack --joplin-plugin-config createArchive",
-    "prepare": "npm run dist",
-    "update": "npm install -g generator-joplin && yo joplin --update"
+    "prepare": "npm run dist"
   },
   "license": "MIT",
   "keywords": [
@@ -12,10 +11,12 @@
   ],
   "devDependencies": {
     "@types/node": "^14.0.14",
+    "canvas": "^2.6.1",
     "chalk": "^4.1.0",
     "copy-webpack-plugin": "^6.1.0",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
+    "node-loader": "^1.0.2",
     "on-build-webpack": "^0.1.0",
     "tar": "^6.0.5",
     "ts-loader": "^7.0.5",
@@ -23,5 +24,9 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "yargs": "^16.2.0"
+  },
+  "dependencies": {
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^2.6.347"
   }
 }
