--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "devDependencies": {
     "@types/node": "^14.0.14",
+    "@types/sqlite3": "^3.1.7",
     "canvas": "^2.6.1",
     "chalk": "^4.1.0",
     "copy-webpack-plugin": "^6.1.0",
